samples/_failures_safe/1761378612_4acd3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4d4d200.c: In function ‘print_statistics’:
./samples/SAFE/__tmp_c4d4d200.c:134:5: error: expected identifier at end of input
  134 |     if (stats->
      |     ^~
./samples/SAFE/__tmp_c4d4d200.c:134:5: error: expected declaration or statement at end of input
